Collection View Added

--- a/JakartaLearningProject/View/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/View/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="E3G-Er-J5l"/>
                         <segue destination="rn5-bT-KNt" kind="relationship" relationship="viewControllers" id="rnm-vv-G6U"/>
-                        <segue destination="N7a-lh-1rq" kind="relationship" relationship="viewControllers" id="rek-7Q-tqX"/>
+                        <segue destination="ta4-wh-Vja" kind="relationship" relationship="viewControllers" id="tib-EE-Fz2"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6FA-Az-zEs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -58,7 +58,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Scan" id="IYC-Eh-JTN"/>
+                    <tabBarItem key="tabBarItem" title="Scan" image="scan" id="IYC-Eh-JTN"/>
                     <navigationItem key="navigationItem" id="JcN-X3-Una">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="9mO-tl-Vw9">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CR0-W8-9hi">
@@ -76,54 +76,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1863.7681159420292" y="-667.63392857142856"/>
-        </scene>
-        <!--Achievement-->
-        <scene sceneID="qYs-17-bR2">
-            <objects>
-                <viewController storyboardIdentifier="s" title="Achievement" id="N7a-lh-1rq" customClass="AchievementController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="q7B-ds-wYX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="08b-EU-Ygc">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UBX-A8-9if">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="tTa-bC-P5M">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="N7a-lh-1rq" id="aDi-sd-asp"/>
-                                    <outlet property="delegate" destination="N7a-lh-1rq" id="nYY-c6-c2Y"/>
-                                </connections>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <constraints>
-                            <constraint firstItem="08b-EU-Ygc" firstAttribute="bottom" secondItem="73h-gH-kZZ" secondAttribute="bottom" id="5E0-Wr-ZVe"/>
-                            <constraint firstItem="08b-EU-Ygc" firstAttribute="leading" secondItem="73h-gH-kZZ" secondAttribute="leading" id="JQT-9N-wuZ"/>
-                            <constraint firstItem="08b-EU-Ygc" firstAttribute="top" secondItem="73h-gH-kZZ" secondAttribute="top" id="Q4w-5R-Kkg"/>
-                            <constraint firstItem="08b-EU-Ygc" firstAttribute="trailing" secondItem="73h-gH-kZZ" secondAttribute="trailing" id="ii6-0e-uTV"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="73h-gH-kZZ"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Achievement" id="z9T-Sb-wyx"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jRr-Kb-AmY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1863.7681159420292" y="20.758928571428569"/>
         </scene>
         <!--Map-->
         <scene sceneID="w1r-ld-UQA">
@@ -162,7 +114,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bp0-Gl-rRd"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" id="SPX-rv-9wd"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="map" id="SPX-rv-9wd"/>
                     <connections>
                         <outlet property="imageView" destination="umf-Dj-Xva" id="99D-bS-BYk"/>
                         <outlet property="scrollView" destination="OgL-3t-3qx" id="4GS-wa-Rfc"/>
@@ -197,15 +149,6 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jDa-yu-BeB">
-                                        <rect key="frame" x="40" y="52" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <action selector="backButton:" destination="oSA-Pi-IFS" eventType="touchUpInside" id="92m-g3-wGr"/>
-                                            <segue destination="4Ju-mD-nvL" kind="show" id="jju-qd-dxZ"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fn4-HE-Bjy">
                                         <rect key="frame" x="32" y="410" width="350" height="276"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -213,6 +156,15 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jDa-yu-BeB">
+                                        <rect key="frame" x="8.5" y="72" width="55" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="back"/>
+                                        <connections>
+                                            <action selector="backButton:" destination="oSA-Pi-IFS" eventType="touchUpInside" id="92m-g3-wGr"/>
+                                            <segue destination="4Ju-mD-nvL" kind="show" id="jju-qd-dxZ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
@@ -246,8 +198,92 @@
             </objects>
             <point key="canvasLocation" x="3002.898550724638" y="-633.48214285714278"/>
         </scene>
+        <!--Achievement-->
+        <scene sceneID="1XK-nS-IcO">
+            <objects>
+                <viewController title="Achievement" id="ta4-wh-Vja" customClass="ExploreViewController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fJJ-jp-pvC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G6d-lZ-krp">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                    <color key="textColor" red="1" green="0.99998801950000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <offsetWrapper key="textShadowOffset" horizontal="-300" vertical="0.0"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Explored Place" id="Uwm-Yo-qls"/>
+                                </items>
+                            </navigationBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WGD-yN-d0N">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="scrollIndicatorInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="g20-fv-eKp">
+                                    <size key="itemSize" width="389" height="277"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="wnP-3G-xeY" customClass="PhotoCell" customModule="JakartaLearningProject" customModuleProvider="target">
+                                        <rect key="frame" x="12.5" y="10" width="389" height="277"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="389" height="277"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ctR-Kz-8cD">
+                                                    <rect key="frame" x="0.0" y="0.0" width="438" height="314"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="I0v-D8-RhJ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="3840" height="2160"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </view>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="imageView" destination="I0v-D8-RhJ" id="wJd-wN-fXx"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="ta4-wh-Vja" id="NPG-qS-JKz"/>
+                                    <outlet property="delegate" destination="ta4-wh-Vja" id="gDx-bn-xDk"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <viewLayoutGuide key="safeArea" id="BuA-hT-stO"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Explored" image="explored" id="G45-2Z-KRw"/>
+                    <connections>
+                        <outlet property="collectionView" destination="WGD-yN-d0N" id="Pip-25-Gnx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Oe-db-5ZL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1924.6376811594205" y="20.758928571428569"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="0" width="3840" height="2160"/>
+        <image name="back" width="55" height="21"/>
+        <image name="explored" width="24" height="26"/>
+        <image name="map" width="26" height="25"/>
         <image name="peta-1" width="600" height="683"/>
+        <image name="scan" width="26" height="26"/>
     </resources>
 </document>
